src/examples/invalid/static/invalid-return.ra
func test(): int {
  return false;
}

func main(): void {
  a = test();
  print(a);
}
